added state filter
